<resources>
    <string name="app_name">NewsApp</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_news">No news found.</string>

    <string name="settings_page_size">Number of items displayed</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default">15</string>
    <string name="settings">Settings</string>
    <string name="settings_name">Settings</string>
    <string name="settings_news_number">News number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="since">Since date</string>
    <string name="comma">,</string>
    <string name="since_date">Since</string>

</resources>
