<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/r_16dp"
    tools:context="com.example.janekxyz.newsapp.Search.SearchActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/r_16dp"
        android:hint="@string/category"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:focusable="false"
        android:layout_marginTop="@dimen/r_16dp"
        android:hint="@string/since_date"
        android:inputType="date"
        />

</RelativeLayout>
